fix(categries-tile): shadow is cut off by the parent container

--- a/assets/scss/partials/layout/list.scss
+++ b/assets/scss/partials/layout/list.scss
@@ -51,7 +51,6 @@
 
 .subsection-list {
     margin-bottom: var(--section-separation);
-    overflow-x: auto;
 
     .article-list--tile {
         display: grid;
